# cgtools

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  License  Makefile  README.md  conventions.md  health.md  issues.md  locales.config.yml  locales.md  openSource.md  readme.md  rulebook.md  todo.md
.cargo/: config.toml
examples/minwebgl/2d_line/: Cargo.toml  readme.md
examples/minwebgl/2d_line/shaders/: background.frag  main.frag  main_solid.frag  main_transparent.frag  main_uv.frag
examples/minwebgl/2d_line/src/: events.rs  lil_gui.rs  main.rs
examples/minwebgl/3d_line/: Cargo.toml  gui.js  index.html  readme.md
examples/minwebgl/3d_line/shaders/: background.frag  background.vert
examples/minwebgl/3d_line/src/: camera_controls.rs  lil_gui.rs  main.rs  settings.rs  simulation.rs
examples/minwebgl/animation_surface_rendering/: Cargo.toml  README.md  index.html  readme.md
examples/minwebgl/animation_surface_rendering/.cargo/: config.toml
examples/minwebgl/animation_surface_rendering/src/: animation.rs  camera_controls.rs  main.rs  primitive.rs  primitive_data.rs
examples/minwebgl/area_light/: Cargo.toml  gui.js  index.html  readme.md
examples/minwebgl/area_light/shaders/: area_light.frag  backup.frag  light_body.frag  light_body.vert  main.vert
examples/minwebgl/area_light/src/: light.rs  lil_gui.rs  main.rs  plane.rs  precompute.rs
examples/minwebgl/attributes_vao copy/: Cargo.toml
examples/minwebgl/attributes_vao copy/assets/: specular_1_2.hdr
examples/minwebgl/attributes_vao copy/shaders/: big_triangle.vert  equi_to_cube.frag  equi_to_cube.vert  main.frag
examples/minwebgl/attributes_vao copy/src/: cube_texture.rs  cube_texture2.rs  main.rs
examples/minwebgl/character_control/: Cargo.toml  index.html  readme.md
examples/minwebgl/character_control/src/: gui_setup.rs  lil_gui.rs  main.rs
examples/minwebgl/color_space_conversions/: Cargo.toml  index.html  readme.md
examples/minwebgl/color_space_conversions/src/: main.rs
examples/minwebgl/curve_surface_rendering/: Cargo.toml  README.md  index.html  readme.md
examples/minwebgl/curve_surface_rendering/shaders/: canvas.vert
examples/minwebgl/curve_surface_rendering/src/: camera_controls.rs  canvas_renderer.rs  main.rs  primitive.rs
examples/minwebgl/deferred_shading/: Cargo.toml  index.html  readme.md
examples/minwebgl/deferred_shading/.cargo/: config.toml
examples/minwebgl/deferred_shading/shaders/: big_triangle.vert  deferred.frag  empty.frag  gbuffer.frag  light_sphere.frag  light_sphere.vert  light_volume.vert  main.frag  main.vert  screen_rasterize.vert  screen_texture.frag
examples/minwebgl/deferred_shading/src/: elliptical_orbit.rs  framebuffer.rs  geometry.rs  light.rs  lil_gui.rs  main.rs  main_old.rs  shader.rs  types.rs
examples/minwebgl/diamond/: Cargo.toml  index.html  readme.md
examples/minwebgl/diamond/shaders/: background.frag  background.vert  f.frag  shader.frag  shader.vert  v.vert
examples/minwebgl/diamond/src/: main.rs
examples/minwebgl/filter/: Cargo.toml  README.md  index.html  readme.md
examples/minwebgl/filter/src/: main.rs
examples/minwebgl/filters/: CLAUDE.md  Cargo.toml  README.md  bg_removal.js  controls.js  index.html  readme.md  sidebar_toggle.js  style.css  zoom_pan.js
examples/minwebgl/filters/src/: bg_removal_bindgen.rs  controls.rs  framebuffer.rs  lil_gui.rs  main.rs  renderer.rs  sidebar_toggle.rs  ui_setup.rs  utils.rs  zoom_pan.rs
examples/minwebgl/gltf_viewer/: Cargo.toml  README.md  gui.js  index.html  readme.md
examples/minwebgl/gltf_viewer/shaders/: big_triangle.vert  equi_to_cube.frag  equi_to_cube.vert  main.frag  main.vert  shader.frag  shader.vert
examples/minwebgl/gltf_viewer/src/: buffer.rs  camera.rs  camera_controls.rs  gui_setup.rs  ibl.rs  main.rs  material copy.rs  material.rs  mesh.rs  node.rs  primitive.rs  program.rs  renderer.rs  sampler.rs  scene.rs  texture.rs
examples/minwebgl/hexagonal_grid/: Cargo.toml  index.html  readme.md  rustfmt.toml
examples/minwebgl/hexagonal_grid/shaders/: main.vert
examples/minwebgl/hexagonal_grid/src/: coordinates.rs  drawing.rs  grid.rs  hex_mesh.rs  hex_render.rs  input.rs  layout.rs  main.rs  mesh.rs  pathfind.rs  patterns.rs  webgl_render.rs
examples/minwebgl/hexagonal_grid/tests/: basic.rs
examples/minwebgl/hexagonal_map/: Cargo.toml  config.json  index.html  readme.md
examples/minwebgl/hexagonal_map/shaders/: line.frag  main.frag  main.vert  river.frag  river.vert  river_edge.vert  s.vert  sprite.frag  sprite.vert
examples/minwebgl/hexagonal_map/src/: blob.rs  core_game.rs  helper.rs  main.rs  map_file_format.rs  sprite.rs  tri.rs  triaxial.rs
examples/minwebgl/jewelry_3d_site/: Cargo.toml  index.css  index.html  index.js  readme.md  ui.js
examples/minwebgl/jewelry_configurator/: Cargo.toml  animation.js  colors.json  gui.js  index.html  readme.md  style.css
examples/minwebgl/lottie_surface_rendering/: Cargo.toml  README.md  index.html  readme.md
examples/minwebgl/mapgen_tiles_rendering/: Cargo.toml  README.md  index.html  readme.md
examples/minwebgl/narrow_outline/: Cargo.toml  index.html  readme.md
examples/minwebgl/obj_load/: Cargo.toml  index.html  readme.md
examples/minwebgl/obj_viewer/: Cargo.toml  README.md  index.html  readme.md
examples/minwebgl/object_picking/: Cargo.toml  index.html  readme.md
examples/minwebgl/outline/: Cargo.toml  README.md  index.html  index.js  readme.md
examples/minwebgl/outline_jfa/: Cargo.toml  index.html  index.js
examples/minwebgl/raycaster/: Cargo.toml  index.html  readme.md
examples/minwebgl/renderer_with_outlines/: Cargo.toml  README.md  index.html  readme.md
module/embroidery_tools/: Cargo.toml  convertion  new.pes  read.py  rust.json  temp  without.pes  write.py
module/embroidery_tools/src/: embroidery_file.rs  error.rs  lib.rs  main.rs  stitch_instruction.rs  thread.rs
module/vectorizer/: Cargo.toml  readme.md
module/vectorizer/Article/: article.md  fine_tuning.md
module/vectorizer/src/: commands.rs  common.rs  error.rs  layers.rs  lib.rs  main.rs  svg.rs
(+4385 files in other folders)
