[workspace]

resolver = "2"
members = [
  "module/alias/*",
  "module/blank/*",
  "module/min/*",
  "module/helper/*",
  "module/math/*",
  "examples/minwebgl/*",
  "examples/minwebgpu/*",
  "examples/math/*"
]

# Source :: https://github.com/obox-systems/conventions/blob/master/code_style.md#lints-and-warnings
[workspace.lints.rust]
# Enforces idiomatic Rust 2018 practices.
rust_2018_idioms = "deny"
# Prevents use of unstable features.
future_incompatible = "warn"
# # Encourages documentation for public items.
# missing_docs = "warn" # qqq : uncomment please
# # Suggests implementing Debug for public types.
# missing_debug_implementations = "warn" # qqq : uncomment please
# Warns against using unsafe code.
unsafe-code = "warn"

[workspace.lints.clippy]
# Warns against restrictive language patterns.
restriction = "warn"
# Enforces strict coding styles.
pedantic = "warn"
# Requires documentation for unsafe blocks.
undocumented_unsafe_blocks = "deny"
# Suggests using core instead of std when possible.
std_instead_of_core = "warn"
# Suggests using alloc instead of std when possible.
std_instead_of_alloc = "warn"
# Allows functions called only once.
single_call_fn = "allow"
# Permits #[ inline( always ) ] usage.
inline_always = "allow"
# Allows repeated module names.
module_name_repetitions = "allow"
# Permits absolute paths in code.
absolute_paths = "allow"

# = helpers

[workspace.dependencies.browser_input]
version = "0.1.0"
path = "module/helper/browser_input"

[workspace.dependencies.tiles_tools]
version = "0.1.0"
path = "module/helper/tiles_tools"

[workspace.dependencies.browser_log]
version = "~0.3.0"
path = "module/helper/browser_log"

[workspace.dependencies.browser_tools]
version = "~0.2.0"
path = "module/alias/browser_tools"

[workspace.dependencies.renderer]
version = "0.1.0"
path = "module/helper/renderer"

[workspace.dependencies.canvas_renderer]
version = "0.1.0"
path = "module/helper/canvas_renderer"

[workspace.dependencies.geometry_generation]
version = "0.1.0"
path = "module/helper/geometry_generation"

[workspace.dependencies.line_tools]
version = "0.1.0"
path = "module/helper/line_tools"

# = draw

# [workspace.dependencies.draw_lang]
# version = "~0.1.0"
# path = "module/draw/lang"
#
# [workspace.dependencies.draw_lang_core]
# version = "~0.1.0"
# path = "module/draw/core"
#
# [workspace.dependencies.draw_lang_derive]
# version = "~0.1.0"
# path = "module/draw/derive"
#
# [workspace.dependencies.draw_lang_primitives]
# version = "~0.1.0"
# path = "module/draw/primitives"
#
# [workspace.dependencies.draw_lang_transform]
# version = "~0.1.0"
# path = "module/draw/transform"
#
# [workspace.dependencies.draw_lang_yew]
# version = "~0.1.0"
# path = "module/draw/yew"

# = min

[workspace.dependencies.mingl]
version = "~0.2.0"
path = "module/min/mingl"

[workspace.dependencies.minwebgl]
version = "~0.2.0"
path = "module/min/minwebgl"

[workspace.dependencies.minwebgpu]
version = "~0.1.0"
path = "module/min/minwebgpu"

# = vectorizer
[workspace.dependencies.vectorizer]
version = "~0.1.0"
path = "module/vectorizer"

# = math

[workspace.dependencies.ndarray_cg]
version = "~0.3.0"
path = "module/math/ndarray_cg"

[workspace.dependencies.ndarray_tools]
version = "~0.1.0"
path = "module/alias/ndarray_tools"

[workspace.dependencies.mdmath_core]
version = "~0.3.0"
path = "module/math/mdmath_core"

# qqq : for Yevhen : comment out it
#[workspace.dependencies.cgmath]
#version = "0.18.0"

# qqq : for Yevhen : comment out it
#[workspace.dependencies.glam]
#version = "0.29.0"

# = external dependencies

[workspace.dependencies.derive_tools]
version = "~0.36.0"

[workspace.dependencies.component_model]
version = "~0.4.0"

[workspace.dependencies.strum]
version = "0.27.1"

[workspace.dependencies.mod_interface]
version = "~0.34.0"

[workspace.dependencies.former]
version = "~2.18.0"

[workspace.dependencies.error_tools]
version = "0.22.0"

[workspace.dependencies.test_tools]
version = "~0.16.0"

[workspace.dependencies.clone_dyn_types]
version = "~0.31.0"

[workspace.dependencies.asbytes]
version = "0.2.0"

# = third-party dependencies
# qqq : categorize them

[workspace.dependencies.log]
version = "0.4.27"

[workspace.dependencies.wasm-bindgen]
version = "0.2.100"

[workspace.dependencies.js-sys]
version = "0.3.77"
features = []

[workspace.dependencies.web-sys]
version = "0.3.77"
features = []

[workspace.dependencies.bytemuck]
version = "1.23.0"
features = [ "derive" ]

[workspace.dependencies.ndarray]
version = "0.16.1"

[workspace.dependencies.approx]
version = "0.5.1"

[workspace.dependencies.num-traits]
version = "0.2.19"

[workspace.dependencies.wasm-bindgen-futures]
version = "0.4.50"

# [workspace.dependencies.generic-array]
# version = "1.1.0"

# [workspace.dependencies.static_assertions]
# version = "1.1.0"

[workspace.dependencies.tobj]
version = "4.0.2"
default-features = false
features = [ "async" ]

[workspace.dependencies.visioncortex]
git  = "https://github.com/obox-systems/visioncortex.git"
version = "0.8.8"

[workspace.dependencies.palette]
version = "0.7.6"

[workspace.dependencies.fastrand]
version = "1.8"

[workspace.dependencies.serde]
version = "1.0.219"

[workspace.dependencies.serde_with]
version = "3.11.0"

[workspace.dependencies.byteorder]
version = "1.5.0"

[workspace.dependencies.itertools]
version = "0.13.0"

# qqq : use error_tools instead
[workspace.dependencies.thiserror]
version = "2.0.4"

[workspace.dependencies.clap]
version = "4.5.21"
features = ["derive"]

[workspace.dependencies.image]
version = "0.25.5"

[workspace.dependencies.tokio]
version = "1.41.0"

[workspace.dependencies.gltf]
version = "1.4.1"

[workspace.dependencies.csgrs]
version = "0.19.1"
default-features = false
features = [ "f64", "delaunay" ]

[workspace.dependencies.parry3d]
version = "0.21.0"

[workspace.dependencies.norad]
default-features = false
features = [ "kurbo" ]
version = "0.16.0"

[workspace.dependencies.parley]
version = "0.5.0"

[workspace.dependencies.kurbo]
version = "0.11.2"

#[workspace.dependencies.lottie]
#version = "0.1.0"

[workspace.dependencies.interpoli]
git = "https://github.com/linebender/interpoli"

[workspace.dependencies.zune-hdr]
git = "https://github.com/etemesi254/zune-image"

[workspace.dependencies.uuid]
version = "1.16.0"
features = [ "v4", "js" ]

[workspace.dependencies.rand]
version = "0.9.1"

# Needs flag: RUSTFLAGS='--cfg getrandom_backend="wasm_js"'
[workspace.dependencies.getrandom]
version = "0.3.3"

[workspace.dependencies.rustc-hash]
version = "2.1.1"

[workspace.dependencies.pathfinding]
version = "4.14.0"

[workspace.dependencies.serde-wasm-bindgen]
version = "0.6.5"

[workspace.dependencies.quick-xml]
version = "0.37.5"

[workspace.dependencies.serde_json]
version = "1.0.140"

[workspace.dependencies.color]
version = "0.3.1"

[workspace.dependencies.hex_color]
version = "3.0.0"

[workspace.dependencies.wee_alloc]
version = "0.4"

[workspace.dependencies.earcutr]
version = "0.5"
