[package]
name = "embroidery_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
mod_interface = { workspace = true }
byteorder = { workspace = true }
itertools = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.140"
tempfile = "3.17.1"

[lints]
workspace = true
