[package]
name = "animation_surface_rendering"
version = "0.1.0"
edition = "2021"
authors = [
  "Kostiantyn Mysnyk <wandalen@obox.systems>",
  "Avramenko Yevhenii <yevhenii.av@obox.systems>",
  "Bilan Vadym <vadym.b@obox.systems>"
]

[lints]
workspace = true

[dependencies]
mod_interface = { workspace = true }
minwebgl = { workspace = true, features = [ "future", "math", "diagnostics" ] }
mingl = { workspace = true, features = [ "camera_orbit_controls" ] }
gltf = { workspace = true, features = [ "import", "KHR_materials_specular" ] }
renderer = { workspace = true }
canvas_renderer = { workspace = true }
primitive_generation = { workspace = true, features = [ "font-processing" ] }
kurbo = { version = "0.11.2" }
zune-hdr = { workspace = true }
interpoli = { workspace = true }
peniko = { version = "0.4.0" }
color = { workspace = true }
earcutr = { workspace = true }
former = { workspace = true }
rustc-hash = { workspace = true }

[dependencies.web-sys]
workspace = true
features = [
  'MouseEvent',
  'PointerEvent',
  'WheelEvent',
  'WebGlTexture',
  'HtmlImageElement',
  'Blob',
  'BlobPropertyBag',
  'Url',
  'WebGlFramebuffer',
  'WebGlRenderbuffer'
]
