[package]
name = "minwebgl_attributes_vaoasdsad"
version = "0.1.0"
edition = "2021"
authors = [ "Kostiantyn Mysnyk <wandalen@obox.systems>" ]
license = "MIT"

[dependencies]
minwebgl = { workspace = true, features = [ "future", "math", "diagnostics" ] }
#zune-hdr = { git = "https://github.com/JekiXD/zune-image", branch = "test" }
zune-hdr = { git = "https://github.com/etemesi254/zune-image" }
#"0.4.0"
bytemuck = "1.23.0"

[dependencies.web-sys]
workspace = true
features = [
  'MouseEvent',
  'PointerEvent',
  'WheelEvent',
  'WebGlTexture',
  'HtmlImageElement',
  'Blob',
  'BlobPropertyBag',
  'Url',
  'WebGlFramebuffer',
  'WebGlRenderbuffer'
]
