[package]
name = "color_space_conversions"
version = "0.1.0"
edition = "2021"
authors = [
  "Kostiantyn Mysnyk <wandalen@obox.systems>",
  "Bilan Vadym <vadym.b@obox.systems>"
]

[lints]
workspace = true

[dependencies]
color = { workspace = true }
hex_color = { workspace = true }
minwebgl = { workspace = true, features = ["math"] }
web-sys = { workspace = true, features = [
  "WebGlFramebuffer",
  "WebGlRenderbuffer",
  "WebGlTexture",
  "HtmlInputElement",
  "Event",
  "Blob",
  "BlobPropertyBag",
  "Url"
] }
