[package]
name = "curve_surface_rendering"
version = "0.1.0"
edition = "2021"
authors = [ 
  "Kostiantyn Mysnyk <wandalen@obox.systems>",
  "Avramenko Yevhenii <yevhenii.av@obox.systems>",
  "Bilan Vadym <vadym.b@obox.systems>" 
]

[lints]
workspace = true

[dependencies]
minwebgl = { workspace = true, features = [ "future", "math", "diagnostics" ] }
mingl = { workspace = true, features = [ "camera_orbit_controls" ] }
gltf = { workspace = true, features = [ "import", "KHR_materials_specular" ] }
renderer = { workspace = true }
zune-hdr = { workspace = true }
csgrs = { workspace = true }
parry3d = { workspace = true }
glam = "0.30.1"
rand = { workspace = true }
getrandom = { workspace = true, features = [ "wasm_js" ] }
kurbo = { workspace = true }
image = { workspace = true }

[dependencies.web-sys]
workspace = true
features = [
  'MouseEvent',
  'PointerEvent',
  'WheelEvent',
  'WebGlTexture',
  'HtmlImageElement',
  'Blob',
  'BlobPropertyBag',
  'Url',
  'WebGlFramebuffer',
  'WebGlRenderbuffer'
]
