[package]
name = "minwebgl_diamond"
version = "0.1.0"
edition = "2021"
authors = [
  "Kostiantyn Mysnyk <wandalen@obox.systems>",
  "Avramenko Yevhenii <yevhenii.av@obox.systems>"
]

[dependencies]

minwebgl = { workspace = true, features = [ "future" ] }
glam = { workspace = true }
gltf = { workspace = true, features = [ "import" ] } # Added features back
image = { workspace = true } # Added features back (assuming default features are needed)

[dependencies.web-sys]
workspace = true
features = [
  'WebGlTexture'
]
