[package]
name = "minwebgl_diamond"
version = "0.1.0"
edition = "2021"
authors = [
  "Kostiantyn Mysnyk <wandalen@obox.systems>",
  "Avramenko Yevhenii <yevhenii.av@obox.systems>"
]

[dependencies]

minwebgl = { workspace = true, features = [ "future" ] }
glam = { workspace = true } # qqq : for Yevhen : remove it
gltf = { version = "1.4.1", features = [ "import" ] }
image = "0.25.2"
# qqq : for yevhen : avoid using image crate

[dependencies.web-sys]
workspace = true
features = [
  'WebGlTexture'
]
