[package]
name = "filters"
version = "0.1.0"
edition = "2021"
authors = [
  "Kostiantyn Mysnyk <wandalen@obox.systems>",
  "Oleksandr Zaharevskyi <oleksandr.z@obox.systems>",
]

[dependencies]
serde = { workspace = true, features = ['derive'] }
serde-wasm-bindgen = { workspace = true }
minwebgl = { workspace = true }
web-sys = { workspace = true, features = [
  'HtmlImageElement',
  'HtmlButtonElement',
  'WebGlFramebuffer',
  'WebGlTexture',
  'Location',
] }

[lints]
workspace = true
