[package]
name = "minwebgl_gltf_viewer"
version = "0.1.0"
edition = "2021"
authors = [ 
  "Kostiantyn Mysnyk <wandalen@obox.systems>",
  "Avramenko Yevhenii <yevhenii.av@obox.systems>" 
]

[dependencies]

minwebgl = { workspace = true, features = [ "future", "math", "diagnostics" ] }
mingl = { workspace = true, features = [ "camera_orbit_controls" ] }
gltf = { workspace = true, features = [ "import", "KHR_materials_specular" ] }
glam = "0.30.1"
zune-hdr = { git = "https://github.com/etemesi254/zune-image" }

#bytemuck = "1.23.0"
bytemuck = { workspace = true }

[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
  "v4",
  "js"
]

[dependencies.web-sys]
workspace = true
features = [
  'MouseEvent',
  'PointerEvent',
  'WheelEvent',
  'WebGlTexture',
  'HtmlImageElement',
  'Blob',
  'BlobPropertyBag',
  'Url',
  'WebGlFramebuffer'
]
